[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/variations/0/Var0.gd" type="Script" id=1]
[ext_resource path="res://assets/font/Montserrat-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/img/48-481625_another-simple-example-could-involve-a-triangle-yellow.png" type="Texture" id=3]
[ext_resource path="res://assets/img/spinningwheel-removebg-preview.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 900.0
margin_bottom = 600.0
color = Color( 1, 0.913725, 0.839216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionLabel" type="Label" parent="."]
margin_left = 46.9966
margin_top = 26.7458
margin_right = 185.997
margin_bottom = 49.7458
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.396078, 0.25098, 0.384314, 1 )
text = "Â¡Gira la ruleta!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinishedButton" type="Button" parent="."]
margin_left = 779.0
margin_top = 543.0
margin_right = 868.0
margin_bottom = 570.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.980392, 0.584314, 0.47451, 1 )
text = "Realizado"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinWheelSprite" type="Sprite" parent="."]
position = Vector2( 455.218, 272.743 )
scale = Vector2( 1.3218, 1.3218 )
texture = ExtResource( 4 )

[node name="StopSpinSprite" type="Sprite" parent="."]
position = Vector2( 456.108, 100.177 )
rotation = 3.14586
scale = Vector2( 0.0210013, 0.0210013 )
texture = ExtResource( 3 )

[node name="SpinButton" type="Button" parent="."]
margin_left = 426.268
margin_top = 259.956
margin_right = 482.268
margin_bottom = 288.956
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.396078, 0.839216, 0.807843, 1 )
text = "Girar"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="FinishedButton" to="." method="_on_FinishedButton_pressed"]
[connection signal="pressed" from="SpinButton" to="." method="_on_SpinButton_pressed"]
